<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/whib"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="75sp"
        tools:text="WHIB" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/where_have_i_been"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp" />


    <Button
        android:id="@+id/gotomappage"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimary"
        android:text="@string/Start" />


</LinearLayout>

