<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settingspage">

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="28dp"
        android:text="CheckBox"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="188dp" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="#0dc4ae"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/backtomap"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="66dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:background="#fc9e3a"
        android:contentDescription="@string/todo"
        android:scaleType="fitStart"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="221dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="Settings"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/full_screen"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox4"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/night_mode"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/another_option"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="28dp"
        android:text="CheckBox"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="252dp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="28dp"
        android:text="CheckBox"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="316dp" />
</androidx.constraintlayout.widget.ConstraintLayout>