<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Memorylist">

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#0dc4ae"
        tools:layout_editor_absoluteY="521dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:background="#fc9e3a"
        android:contentDescription="@string/joe"
        android:padding="15dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:srcCompat="@drawable/ic_menu_gallery" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/picture"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:background="@drawable/Roundedborderblack"
        android:contentDescription="@string/picture"
        android:padding="15dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:srcCompat="@drawable/ic_menu_camera"
        tools:layout_editor_absoluteY="488dp" />

    <ImageButton
        android:id="@+id/backtomain4"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:background="#fc9e3a"
        android:contentDescription="@string/todo"
        android:padding="15dp"
        android:scaleType="fitStart"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        tools:src="@drawable/ic_map_black_24dp" />

    <ImageButton
        android:id="@+id/backtomain5"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginEnd="16dp"
        android:background="#fc9e3a"
        android:contentDescription="@string/todo"
        android:padding="15dp"
        android:scaleType="fitStart"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/ic_search_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toStartOf="@+id/backtomain6"
        app:layout_constraintTop_toTopOf="@+id/view3"
        tools:src="@drawable/ic_search_black_24dp" />

    <ImageButton
        android:id="@+id/backtomain6"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginEnd="16dp"
        android:background="#fc9e3a"
        android:contentDescription="@string/todo"
        android:padding="15dp"
        android:scaleType="fitStart"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        tools:src="@drawable/ic_settings_black_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>